Increase overlay nav default height

--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -72,6 +72,7 @@
 
 // Overlay nav
 .header-style-overlay {
+  --navigation-height: 48px;
   --navigation-background-sticky-start-opacity: 1;
 
   .main-navigation {
