Remove output buffer from recommendation page cover

--- a/src/scss/_recommendation.scss
+++ b/src/scss/_recommendation.scss
@@ -19,7 +19,7 @@
       border-radius: var(--layout-border-radius-small);
     }
 
-    img {
+    &-image {
       width: inherit;
       filter: var(--figure-drop-shadow);
 
