--- a/src/scss/admin/settings.scss
+++ b/src/scss/admin/settings.scss
@@ -424,12 +424,21 @@ body[class*="fictioneer_page_"] {
         margin-left: 24px;
       }
 
-      &--capabilities {
+      &--capabilities,
+      &--boxes {
         display: flex;
         flex-wrap: wrap;
         align-items: flex-start;
         gap: 8px;
       }
+
+       &--boxes {
+        align-items: stretch;
+
+        > div {
+          flex: 1 1 130px;
+        }
+       }
 
       &--buttons,
       &--single-form-submit {
@@ -458,6 +467,20 @@ body[class*="fictioneer_page_"] {
       &--disabled {
         pointer-events: none;
         opacity: .5;
+      }
+    }
+
+    &__box {
+      background: #f6f7f7;
+      font-size: 11px;
+      text-align: center;
+      padding: 8px 10px 10px;
+
+      &-title {
+        font-size: 12px;
+        font-weight: 700;
+        text-transform: uppercase;
+        margin-bottom: 4px;
       }
     }
 
