--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -340,8 +340,7 @@
   font-family: "OpenDyslexic";
   src: local("OpenDyslexic3 Regular"),
        local("OpenDyslexic3-Regular"),
-       url("../fonts/OpenDyslexic3/OpenDyslexic3-Regular.ttf"),
-       url("../fonts/OpenDyslexic2/OpenDyslexic-Regular.otf");
+       url("../fonts/open-dyslexic-3/OpenDyslexic3-Regular.ttf");
   font-weight: 400;
   font-display: swap;
 }
@@ -350,8 +349,7 @@
   font-family: "OpenDyslexic";
   src: local("OpenDyslexic3 Bold"),
        local("OpenDyslexic3-Bold"),
-       url("../fonts/OpenDyslexic3/OpenDyslexic3-Bold.ttf"),
-       url("../fonts/OpenDyslexic2/OpenDyslexic-Bold.otf");
+       url("../fonts/open-dyslexic-3/OpenDyslexic3-Bold.ttf");
   font-weight: 700;
   font-display: swap;
 }
