--- a/src/scss/complete.scss
+++ b/src/scss/complete.scss
@@ -8,7 +8,7 @@
 @import 'properties';
 @import 'application';
 @import 'comments';
-@import 'fonts';
+@import 'fonts-full';
 @import 'collections';
 
 @import '_reader-settings';
