--- a/src/scss/admin/settings.scss
+++ b/src/scss/admin/settings.scss
@@ -128,6 +128,12 @@ body[class*="fictioneer_page_"] {
     margin: 0;
   }
 
+  h1 {
+    font-size: 23px;
+    font-weight: 400;
+    margin: 0;
+  }
+
   img {
     display: block;
     border-radius: 2px;
