--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -39,7 +39,7 @@
     content-visibility: auto;
 
     &-heading {
-      font: 700 var(--site-title-font-size)/1.3 var(--site-title-font);
+      font: 700 var(--site-title-font-size)/1.3 var(--ff-site-title);
       letter-spacing: 0;
 
       a {
@@ -156,7 +156,7 @@
   }
 
   &__heading {
-    font: 700 var(--site-title-font-size)/1.3 var(--site-title-font);
+    font: 700 var(--site-title-font-size)/1.3 var(--ff-site-title);
     letter-spacing: 0;
 
     a {
