--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -174,6 +174,7 @@ $header_breakpoint: 640px;
 
   &__identity {
     h1 {
+      font-family: var(--ff-story-title);
       font-size: get_clamp(22, 32, 320, $full-width);
       line-height: 1.2;
     }
