--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -104,7 +104,9 @@ td.comment {
 
 #customize-control-use_custom_layout,
 #customize-control-use_custom_dark_mode,
-#customize-control-use_custom_light_mode {
+#customize-control-use_custom_light_mode,
+#customize-control-site_title_font_family_value,
+#customize-control-dark_mode_font_weight {
   padding-top: 8px;
   margin-top: 8px;
   border-top: 2px solid #dcdcde;
