--- a/src/scss/fonts/open-dyslexic-3.scss
+++ b/src/scss/fonts/open-dyslexic-3.scss
@@ -13,6 +13,8 @@
        local("OpenDyslexic3-Regular"),
        url("../fonts/open-dyslexic-3/OpenDyslexic3-Regular.ttf");
   font-weight: 400;
+  size-adjust: 85%;
+  ascent-override: 120%;
   font-display: swap;
 }
 
@@ -22,5 +24,7 @@
        local("OpenDyslexic3-Bold"),
        url("../fonts/open-dyslexic-3/OpenDyslexic3-Bold.ttf");
   font-weight: 700;
+  size-adjust: 85%;
+  ascent-override: 120%;
   font-display: swap;
 }
