Update settings page style

--- a/src/scss/admin/settings.scss
+++ b/src/scss/admin/settings.scss
@@ -128,7 +128,7 @@ body[class*="fictioneer_page_"] {
     margin: 0;
   }
 
-  h1 {
+  &__content h1 {
     font-size: 23px;
     font-weight: 400;
     margin: 0;
