--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -39,6 +39,7 @@
   --ff-story-title: var(--ff-heading);
   --ff-chapter-title: var(--ff-heading);
   --ff-chapter-list-title: var(--ff-base);
+  --ff-card-body: var(--ff-note);
   --ff-card-list-link: inherit;
   --ff-nav-item: var(--ff-base);
 
