--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -49,7 +49,7 @@
 
     &-tagline {
       color: var(--site-title-tagline-color);
-      font: 400 var(--site-title-tagline-font-size)/1.3 var(--ff-heading);
+      font: 400 var(--site-title-tagline-font-size)/1.3 var(--ff-site-title);
       letter-spacing: 0;
       margin-top: .5rem;
     }
@@ -166,7 +166,7 @@
 
   &__tagline {
     color: var(--site-title-tagline-color);
-    font: 400 var(--site-title-tagline-font-size)/1.3 var(--ff-heading);
+    font: 400 var(--site-title-tagline-font-size)/1.3 var(--ff-site-title);
     letter-spacing: 0;
   }
 
