--- a/src/scss/admin/settings.scss
+++ b/src/scss/admin/settings.scss
@@ -391,9 +391,29 @@ body[class*="fictioneer_page_"] {
     background: var(--card-background-color);
     border: 1px solid var(--card-border-color);
 
+    &--disabled {
+      .fictioneer-card__content {
+        opacity: 0.5;
+      }
+    }
+
     &__header {
       padding: 8px 12px;
       border-bottom: 1px solid #c3c4c7;
+
+      &--with-actions {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 20px;
+
+        .button {
+          font-size: 12px;
+          line-height: 1.5;
+          min-height: auto;
+        }
+      }
     }
 
     &__header,
