Extend list of available utility classes

--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -219,6 +219,20 @@ body:not(.is-editor):not(.is-admin) {
   }
 }
 
+.show-below-tablet {
+  @include bp(tablet) {
+    display: none !important;
+    content-visibility: hidden;
+  }
+}
+
+.show-below-640 {
+  @include bp(640px) {
+    display: none !important;
+    content-visibility: hidden;
+  }
+}
+
 .show-below-480 {
   @include bp(480px) {
     display: none !important;
