--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -933,51 +933,57 @@
   }
 }
 
-// .card {
-//   &__body {
-//     padding: 0;
+.card._unfolded {
+  &:is(._small, ._article) .card__body > .card__footer {
+    margin-top: 0;
+  }
 
-//     &._article {
-//       .card__tag-list._scrolling {
-//         padding: 0 var(--padding);
-//         margin-top: calc(-1 * var(--card-footer-margin-top, 1em));
-//         margin-bottom: 0;
-//       }
-//     }
-//   }
+  .card__body {
+    padding: 0;
 
-//   &__main {
-//     padding: 0 var(--padding) ;
-//   }
+    &._article {
+      .card__tag-list._scrolling {
+        padding: 0 var(--padding);
+        margin-top: calc(-1 * var(--card-footer-margin-top, 1em));
+        margin-bottom: 0;
+      }
+    }
 
-//   &__main:is(._small, ._article) {
-//     padding: var(--padding);
-//   }
+    > .card__footer {
+      gap: 0;
 
-//   .card__body > .card__footer {
-//     gap: 0;
-//   }
+      .card__footer-box {
+        background: none;
+        border-top: 2px solid var(--infobox-background);
 
-//   &:is(._small, ._article) .card__body > .card__footer {
-//     margin-top: 0;
-//   }
+        &._right {
+          border-left: 2px solid var(--infobox-background);
+          min-width: 9cqw;
+        }
+      }
+    }
+  }
 
-//   .card__body > .card__footer .card__footer-box {
-//     background: none;
-//     border-top: 2px solid var(--infobox-background);
+  .card__header {
+    padding: var(--padding) var(--padding) 0;
+  }
 
-//     &._left {
+  .card__main {
+    padding: 0 var(--padding);
 
-//     }
+    &:is(._small, ._article, ._hidden-result) {
+      padding: var(--padding);
+    }
+  }
 
-//     &._right {
-//       border-left: 2px solid var(--infobox-background);
-//       min-width: 9cqw;
-//     }
-//   }
+  &._recommendation {
+    .card__main {
+      padding-bottom: var(--padding);
+    }
+  }
 
-//   .card__footer._article .card__footer-box,
-//   :is(.card__body > .card__footer .card__footer-box._left) {
-//     padding: calc(var(--padding) * 0.75) var(--padding);
-//   }
-// }
+  .card__footer._article .card__footer-box,
+  .card__body > .card__footer .card__footer-box:is(._left, :last-child) {
+    padding: calc(var(--padding) * 0.75) var(--padding);
+  }
+}
