--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -1003,4 +1003,9 @@
   .card__body > .card__footer .card__footer-box:is(._left, :last-child) {
     padding: calc(var(--this-padding) * 0.5) var(--this-padding) var(--this-padding);
   }
+
+  .rating-letter-label {
+    font-weight: 700;
+    opacity: 0.5;
+  }
 }
