Add customizer option to fade out header image

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -178,3 +178,8 @@
     }
   }
 }
+
+.header-background._fading-bottom {
+  -webkit-mask-image: var(--header-fading-mask-image);
+  mask-image: var(--header-fading-mask-image);
+}
