Add customizer option to isolate footer

--- a/src/scss/_breadcrumbs.scss
+++ b/src/scss/_breadcrumbs.scss
@@ -13,7 +13,7 @@
 
     &:not(:last-child) {
       &::after {
-        content: '/';
+        content: var(--breadcrumb-divider, '/');
         display: inline-block;
         margin: 0 .4rem;
       }
