--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -118,6 +118,10 @@
   --navigation-new-follow-background: var(--primary-500);
   --navigation-new-follow-color: white;
 
+  // === FOOTER ================================================================
+  --fg-isolated-footer: var(--fg-d800);
+  --bg-isolated-footer: var(--bg-800);
+
   // === TABS ===================================================================
   --tab-background-active: var(--bg-600);
   --tab-background-inactive: var(--bg-200);
