--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -422,10 +422,12 @@
   --infobox-background: var(--bg-900);
   --infobox-text: var(--fg-600);
   --infobox-background-free: var(--bg-900-free);
-  // --infobox-gradient: linear-gradient(-90deg, hsl(var(--infobox-background-free) / 40%) 0%, hsl(var(--infobox-background-free) / 40%) 55%, transparent 90%); // Old
+  --content-list-item-background: var(--content-list-item-background-gradient); // Base assignment
+  --content-list-item-background-full: hsl(var(--infobox-background-free) / 40%);
+  // --content-list-item-background-gradient: linear-gradient(-90deg, hsl(var(--infobox-background-free) / 40%) 0%, hsl(var(--infobox-background-free) / 40%) 55%, transparent 90%); // Old
 
   // Derived from: https://larsenwork.com/easing-gradients/
-  --infobox-gradient: linear-gradient(
+  --content-list-item-background-gradient: linear-gradient(
     to left,
     hsl(var(--infobox-background-free) / 0.395) 48.645%,
     hsl(var(--infobox-background-free) / 0.380) 51.975%,
