--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -274,10 +274,11 @@
   --infobox-background: hsl(var(--bg-1000-free) / 5%);
   --infobox-text: var(--fg-600);
   --infobox-background-free: var(--bg-1000-free);
-  // --infobox-gradient: linear-gradient(-90deg, hsl(var(--infobox-background-free) / 3%) 0%, hsl(var(--infobox-background-free) / 3%) 55%, transparent 90%); // Old
+  --content-list-item-background-full: hsl(var(--infobox-background-free) / 2.25%); // Assigned in _properties.scss
+  // --content-list-item-background-gradient: linear-gradient(-90deg, hsl(var(--infobox-background-free) / 3%) 0%, hsl(var(--infobox-background-free) / 3%) 55%, transparent 90%); // Old
 
   // Derived from: https://larsenwork.com/easing-gradients/
-  --infobox-gradient: linear-gradient(
+  --content-list-item-background-gradient: linear-gradient(
     to left,
     hsl(var(--infobox-background-free) / 0.02961) 48.645%,
     hsl(var(--infobox-background-free) / 0.02853) 51.975%,
