--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -140,7 +140,7 @@
   --mobile-menu-bookmark-text-shadow: none;
   --mobile-menu-bookmark-progress-background: hsl(var(--bg-1000-free) / 10%);
   --mobile-menu-current-chapter-text: var(--fg-300);
-  --mobile-menu-current-chapter-background: var(--bg-200);
+  --mobile-menu-current-chapter-background: rgb(0 0 0 / 10%);
 
   // === CONTENT ===============================================================
   --blockquote-background: hsl(var(--bg-1000-free) / 5%);
