--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -260,7 +260,7 @@
   --mobile-menu-text-shadow: var(--text-shadow);
   --mobile-menu-bookmark-progress-background: rgb(0 0 0 / 40%);
   --mobile-menu-current-chapter-text: var(--fg-400);
-  --mobile-menu-current-chapter-background: var(--bg-800);
+  --mobile-menu-current-chapter-background: rgb(0 0 0 / 25%);
 
   // === CONTENT ===============================================================
   --blockquote-background: rgb(0 0 0 / 15%);
