--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -733,11 +733,24 @@ html:not(.logged-in) body:not(.logged-in) {
   }
 }
 
+:is(:root, :root.minimal) .content-list-style-lines {
+  --content-list-item-background: none;
+
+  :is(.chapter-group__list-item, .story__blog-list-item, .card__link-list-item) {
+    border-radius: 0;
+    border-bottom: 1.5px solid var(--layout-color-separator);
+  }
+
+  .card__link-list-item:last-child {
+    border-bottom: none;
+  }
+}
+
 :root.minimal {
   .chapter-group__list-item {
     background: none;
     border-radius: 0;
-    border-bottom: 1px solid var(--layout-color-separator);
+    border-bottom: 1.5px solid var(--layout-color-separator);
   }
 }
 
