--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -600,3 +600,16 @@
   --font-weight-ribbon: 500;
   --font-weight-navigation: 400;
 }
+
+// =============================================================================
+// THEME MODS
+// =============================================================================
+
+:root.page-style-open {
+  --theme-color-base: 222 15 20; // 800
+  --e-0: var(--bg-800);
+  --layout-main-mobile-box-shadow: none;
+  --layout-main-desktop-box-shadow: none;
+  --minimal-main-box-shadow: none;
+  --layout-header-background-box-shadow: none;
+}
