Add worn-paper polygon page style

--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -45,6 +45,7 @@
   --layout-collection-text: var(--fg-1000);
   --layout-color-lineart: var(--bg-600);
   --layout-color-separator: rgb(0 0 0 / 8%);
+  --layout-polygon-worn-paper-drop-shadow: drop-shadow(0 -1px 1px rgb(0 0 0 / 11%)) drop-shadow(0 0 2px rgb(0 0 0 / 18%));
 
   // === MINIMAL ===============================================================
   --minimal-main-box-shadow: 0 0 1px rgb(0 0 0 / 40%);
